2014-02-16  Julien Bect  <julien.bect@supelec.fr>

	stk_sampling_maximinlhs.m: minor change

	* stk_sampling_maximinlhs.m (lhsdesign_): No need to check if x is
	empty since we start the loop at j == 2, now.

2014-02-12  Julien Bect  <julien.bect@supelec.fr>

	stk_sampling_maximinlhs.m: Do not compute the criterion if niter == 1.

	* stk_sampling_maximinlhs.m: modified

	@stk_kreq_qr: heuristic improvement of numerical conditioning.

	* core/@stk_kreq_qr/private: new folder
	* core/@stk_kreq_qr/private/compute_P_scaling.m: new function
	* core/@stk_kreq_qr/stk_update.m: modified
	* core/@stk_kreq_qr/stk_kreq_qr.m: modified
	* core/@stk_kreq_qr/stk_set_righthandside.m: modified

2014-02-05  Julien Bect  <julien.bect@supelec.fr>

	stk_testfun_braninhoo.m: Fix domain bound in the documentation.

	* examples/test_functions/stk_testfun_braninhoo.m: Fix domain
	bound in the documentation.

2014-01-17  Julien Bect  <julien.bect@supelec.fr>

	Fix a bug in stk_param_init.

	* paramestim/stk_param_init.m: modified

2014-01-16  Julien Bect  <julien.bect@supelec.fr>

	Add size checks to several functions.

	* core/stk_predict.m: modified
	* paramestim/stk_param_init.m: modified
	* paramestim/stk_param_estim.m: modified

2014-01-15  Julien Bect  <julien.bect@supelec.fr>

	Warn Octave users about the problem with MEX-files in privates folders.

	* stk_build.m: modified

2014-01-10  Julien Bect  <julien.bect@supelec.fr>

	First draft for the automatic generation of an Octave package.

	* admin/make_octave_package.py: new script
	* etc/octave-pkg: new folder
	* etc/octave-pkg/pre_install.m: new function
	* etc/octave-pkg/PKG_DEL.m: new function
	* etc/octave-pkg/PKG_ADD.m: new function

	Create a misc folder for optimization related functions.

	* misc/optim: new folder
	* config/stk_select_optimizer.m: moved to misc/optim
	* config/stk_config_addpath.m: modified

	Rename stk_configure -> stk_config_setup

	* misc/stk_configure.m: renamed